--- a/404.html
+++ b/404.html
@@ -11,18 +11,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&amp;display=swap">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="href=&quot;https://fonts.gstatic.com">
+    <link rel="preconnect" href="script.ttf">
     <meta name="description" content="imago_mundi">
     <meta name="theme-color" content="#3eaf7c">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/assets/css/0.styles.8ca43a58.css" as="style"><link rel="preload" href="/assets/js/app.2ce02364.js" as="script"><link rel="preload" href="/assets/js/6.16373f7f.js" as="script"><link rel="prefetch" href="/assets/js/10.03c7399d.js"><link rel="prefetch" href="/assets/js/11.e2c65e0a.js"><link rel="prefetch" href="/assets/js/12.66c5f7d8.js"><link rel="prefetch" href="/assets/js/13.43081998.js"><link rel="prefetch" href="/assets/js/14.5c4ad141.js"><link rel="prefetch" href="/assets/js/15.3eb88917.js"><link rel="prefetch" href="/assets/js/16.7496e63e.js"><link rel="prefetch" href="/assets/js/17.113f4877.js"><link rel="prefetch" href="/assets/js/2.13828ac6.js"><link rel="prefetch" href="/assets/js/3.11bdcc71.js"><link rel="prefetch" href="/assets/js/4.7e57564e.js"><link rel="prefetch" href="/assets/js/5.dc693ec6.js"><link rel="prefetch" href="/assets/js/7.d3fb99ea.js"><link rel="prefetch" href="/assets/js/8.c010c834.js"><link rel="prefetch" href="/assets/js/9.5953a63f.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.8ca43a58.css">
+    <link rel="preload" href="/assets/css/0.styles.613d1dbb.css" as="style"><link rel="preload" href="/assets/js/app.9a701ab3.js" as="script"><link rel="preload" href="/assets/js/7.0d948b14.js" as="script"><link rel="prefetch" href="/assets/js/10.f96b80d6.js"><link rel="prefetch" href="/assets/js/11.b626a1b2.js"><link rel="prefetch" href="/assets/js/12.aff71c16.js"><link rel="prefetch" href="/assets/js/13.dbb05ccd.js"><link rel="prefetch" href="/assets/js/14.156ed25d.js"><link rel="prefetch" href="/assets/js/15.6cdac044.js"><link rel="prefetch" href="/assets/js/16.53784a09.js"><link rel="prefetch" href="/assets/js/17.4525a32d.js"><link rel="prefetch" href="/assets/js/2.4a530985.js"><link rel="prefetch" href="/assets/js/3.391d1c81.js"><link rel="prefetch" href="/assets/js/4.54317f72.js"><link rel="prefetch" href="/assets/js/5.187d9d25.js"><link rel="prefetch" href="/assets/js/6.dd574d2c.js"><link rel="prefetch" href="/assets/js/8.7ade18ae.js"><link rel="prefetch" href="/assets/js/9.4db688b1.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.613d1dbb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.2ce02364.js" defer></script><script src="/assets/js/6.16373f7f.js" defer></script>
+    <script src="/assets/js/app.9a701ab3.js" defer></script><script src="/assets/js/7.0d948b14.js" defer></script>
   </body>
 </html>
