--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&amp;display=swap">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="href=&quot;https://fonts.gstatic.com">
+    <link rel="preconnect" href="script.ttf">
     <meta name="description" content="imago_mundi">
     <meta name="theme-color" content="#3eaf7c">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/assets/css/0.styles.8ca43a58.css" as="style"><link rel="preload" href="/assets/js/app.2ce02364.js" as="script"><link rel="preload" href="/assets/js/2.13828ac6.js" as="script"><link rel="preload" href="/assets/js/17.113f4877.js" as="script"><link rel="prefetch" href="/assets/js/10.03c7399d.js"><link rel="prefetch" href="/assets/js/11.e2c65e0a.js"><link rel="prefetch" href="/assets/js/12.66c5f7d8.js"><link rel="prefetch" href="/assets/js/13.43081998.js"><link rel="prefetch" href="/assets/js/14.5c4ad141.js"><link rel="prefetch" href="/assets/js/15.3eb88917.js"><link rel="prefetch" href="/assets/js/16.7496e63e.js"><link rel="prefetch" href="/assets/js/3.11bdcc71.js"><link rel="prefetch" href="/assets/js/4.7e57564e.js"><link rel="prefetch" href="/assets/js/5.dc693ec6.js"><link rel="prefetch" href="/assets/js/6.16373f7f.js"><link rel="prefetch" href="/assets/js/7.d3fb99ea.js"><link rel="prefetch" href="/assets/js/8.c010c834.js"><link rel="prefetch" href="/assets/js/9.5953a63f.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.8ca43a58.css">
+    <link rel="preload" href="/assets/css/0.styles.613d1dbb.css" as="style"><link rel="preload" href="/assets/js/app.9a701ab3.js" as="script"><link rel="preload" href="/assets/js/2.4a530985.js" as="script"><link rel="preload" href="/assets/js/10.f96b80d6.js" as="script"><link rel="prefetch" href="/assets/js/11.b626a1b2.js"><link rel="prefetch" href="/assets/js/12.aff71c16.js"><link rel="prefetch" href="/assets/js/13.dbb05ccd.js"><link rel="prefetch" href="/assets/js/14.156ed25d.js"><link rel="prefetch" href="/assets/js/15.6cdac044.js"><link rel="prefetch" href="/assets/js/16.53784a09.js"><link rel="prefetch" href="/assets/js/17.4525a32d.js"><link rel="prefetch" href="/assets/js/3.391d1c81.js"><link rel="prefetch" href="/assets/js/4.54317f72.js"><link rel="prefetch" href="/assets/js/5.187d9d25.js"><link rel="prefetch" href="/assets/js/6.dd574d2c.js"><link rel="prefetch" href="/assets/js/7.0d948b14.js"><link rel="prefetch" href="/assets/js/8.7ade18ae.js"><link rel="prefetch" href="/assets/js/9.4db688b1.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.613d1dbb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar home"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" aria-current="page" class="home-link router-link-exact-active router-link-active"><img src="/images/logo.svg" alt="imago mundi" class="logo"> <span class="site-name can-hide">imago mundi</span></a> <div class="links"><!----> <nav class="nav-links can-hide"><div class="nav-item"><a href="/digital/" class="nav-link">
-  digital
-</a></div><div class="nav-item"><a href="/analog/" class="nav-link">
-  analog
-</a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/digital/" class="nav-link">
-  digital
-</a></div><div class="nav-item"><a href="/analog/" class="nav-link">
-  analog
+    <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar homePage"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" aria-current="page" class="home-link router-link-exact-active router-link-active"><img src="/images/logo.svg" alt="imago mundi" class="logo"> <span class="site-name can-hide">imago mundi</span></a> <div class="links"><!----> <nav class="nav-links can-hide"><div class="nav-item"><a href="/writing/" class="nav-link">
+  writing tools
+</a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/writing/" class="nav-link">
+  writing tools
 </a></div> <!----></nav>  <ul class="sidebar-links"><li><a href="/" aria-current="page" class="active sidebar-link">Home</a></li></ul> </aside> <main aria-labelledby="main-title" class="home"><header class="hero"><!----> <h1 id="main-title">
       imago mundi
     </h1> <p class="description">
       imago_mundi
-    </p> <!----></header> <!----> <div class="theme-default-content custom content__default"><img src="images/logo.svg" class="HomeLogo center"></div> <!----></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.2ce02364.js" defer></script><script src="/assets/js/2.13828ac6.js" defer></script><script src="/assets/js/17.113f4877.js" defer></script>
+    </p> <!----></header> <!----> <div class="theme-default-content custom content__default"><div class="VertCenter"><img src="images/logo.svg" class="HomeLogo center"></div></div> <!----></main></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.9a701ab3.js" defer></script><script src="/assets/js/2.4a530985.js" defer></script><script src="/assets/js/10.f96b80d6.js" defer></script>
   </body>
 </html>
