--- a/404.html
+++ b/404.html
@@ -17,13 +17,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/assets/css/0.styles.81fe8966.css" as="style"><link rel="preload" href="/assets/js/app.070b62cb.js" as="script"><link rel="preload" href="/assets/js/7.0d948b14.js" as="script"><link rel="prefetch" href="/assets/js/10.473657fc.js"><link rel="prefetch" href="/assets/js/11.b626a1b2.js"><link rel="prefetch" href="/assets/js/12.7babc170.js"><link rel="prefetch" href="/assets/js/13.9037380d.js"><link rel="prefetch" href="/assets/js/14.b84b3edc.js"><link rel="prefetch" href="/assets/js/15.77017215.js"><link rel="prefetch" href="/assets/js/16.b9091fa3.js"><link rel="prefetch" href="/assets/js/17.f53a2fc9.js"><link rel="prefetch" href="/assets/js/18.ae4933d3.js"><link rel="prefetch" href="/assets/js/2.4a530985.js"><link rel="prefetch" href="/assets/js/3.a69bff96.js"><link rel="prefetch" href="/assets/js/4.c9bb32da.js"><link rel="prefetch" href="/assets/js/5.eacc5221.js"><link rel="prefetch" href="/assets/js/6.d75ae2b6.js"><link rel="prefetch" href="/assets/js/8.7ade18ae.js"><link rel="prefetch" href="/assets/js/9.6cd1d139.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.81fe8966.css">
+    <link rel="preload" href="/assets/css/0.styles.eb959c54.css" as="style"><link rel="preload" href="/assets/js/app.87da509d.js" as="script"><link rel="preload" href="/assets/js/7.0d948b14.js" as="script"><link rel="prefetch" href="/assets/js/10.e5c7b75f.js"><link rel="prefetch" href="/assets/js/11.b626a1b2.js"><link rel="prefetch" href="/assets/js/12.7babc170.js"><link rel="prefetch" href="/assets/js/13.52e332b2.js"><link rel="prefetch" href="/assets/js/14.9508b54c.js"><link rel="prefetch" href="/assets/js/15.77017215.js"><link rel="prefetch" href="/assets/js/16.daddd592.js"><link rel="prefetch" href="/assets/js/17.bb0cf2ee.js"><link rel="prefetch" href="/assets/js/18.ae4933d3.js"><link rel="prefetch" href="/assets/js/2.4a530985.js"><link rel="prefetch" href="/assets/js/3.a69bff96.js"><link rel="prefetch" href="/assets/js/4.54317f72.js"><link rel="prefetch" href="/assets/js/5.187d9d25.js"><link rel="prefetch" href="/assets/js/6.64e75a46.js"><link rel="prefetch" href="/assets/js/8.7ade18ae.js"><link rel="prefetch" href="/assets/js/9.4db688b1.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.eb959c54.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.070b62cb.js" defer></script><script src="/assets/js/7.0d948b14.js" defer></script>
+    <script src="/assets/js/app.87da509d.js" defer></script><script src="/assets/js/7.0d948b14.js" defer></script>
   </body>
 </html>
