--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
     <title>Imago Mundi</title>
     <!--<link rel="shortcut icon" href="favicon.svg">-->
-    <link rel="icon" href="dark.svg"  media="(prefers-color-scheme:dark)">
-    <link rel="icon" href="light.svg" media="(prefers-color-scheme:light)">
+    <link rel="icon" href="favicon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
     <script type="text/javascript" src="script.js"></script>
-    <script src="https://unpkg.com/favicon-switcher@1.2.2/dist/index.js" crossorigin="anonymous" type="application/javascript"></script>
 </head>
 
 <body>
