--- a/theme.html
+++ b/theme.html
@@ -3,10 +3,7 @@
 
 <head>
     <title>Imago Mundi</title>
-    <!--<link rel="shortcut icon" href="favicon.svg">-->
-    <link rel="icon" href="light.svg" media="(prefers-color-scheme:no-preference)">
-    <link rel="icon" href="dark.svg"  media="(prefers-color-scheme:dark)">
-    <link rel="icon" href="light.svg" media="(prefers-color-scheme:light)">
+    <link rel="icon" href="favicon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
     <script type="text/javascript" src="script.js"></script>
