analog page creation, Myfont

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
     <div id="sidebar" class="home">
         <div id="pages">
-            <p><a href="index.html" class="home">Home</a></p>
+            <h1 class="invis">.</h1>
+            <p><a href="index.html" class="active">Home</a></p>
             <p><a href="digital.html">Digital Writing</a></p>
             <p><a href="analog.html">Analog Writing</a></p>
-            <p><a href="theme.html">[Appearances]</a></p>
+            <p><a href="theme.html">[Appearance]</a></p>
         </div>
         <!--
         <div id="headings">
