--- a/theme.html
+++ b/theme.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
     <script type="text/javascript" src="script.js"></script>
-    <script src="https://unpkg.com/favicon-switcher@1.2.2/dist/index.js" crossorigin="anonymous" type="application/javascript"></script>
 </head>
 
 <body>
@@ -20,10 +19,11 @@
 
     <div id="sidebar" class="home">
         <div id="pages">
-            <p><a href="index.html" class="home">Home</a></p>
+            <h1 class="invis">.</h1>
+            <p><a href="index.html">Home</a></p>
             <p><a href="digital.html">Digital Writing</a></p>
             <p><a href="analog.html">Analog Writing</a></p>
-            <p><a href="theme.html">[Appearances]</a></p>
+            <p><a href="theme.html" class="active">[Appearance]</a></p>
         </div>
         <!--
         <div id="headings">
@@ -36,9 +36,10 @@
 <!--
 --------------------------------------------------------------------------------------------------------------
 -->
-
     <div id="main">
-        <button id="theme-toggle">[Toggle Theme]</button>
+
+        <h1 class="invis">.</h1>
+        <p><button id="theme-toggle">[Toggle Theme]</button></p>
     </div>
 
 </div>
