--- a/analog.html
+++ b/analog.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" media="screen" href="style.css">
         <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
         <script type="text/javascript" src="script.js"></script>
+        <link rel="preload" href="Myfont-Regular.woff2" as="font" type="font/woff2" crossorigin>
     </head>
     
     <body>
