--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>Imago Mundi</title>
-        <link rel="icon" href="favicon.svg">
+        <link rel="icon" href="favicon/favicon.svg">
         <link rel="stylesheet" type="text/css" media="screen" href="style.css">
         <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
         <script type="text/javascript" src="script.js"></script>
