courier new, con. ascii chart

--- a/analog.html
+++ b/analog.html
@@ -43,6 +43,105 @@
     <h1 id="alphabet">
     <a class="anchor" href="#alphabet"></a>alphabet
     </h1>
+
+<!--
+There are three families of consonants based on where they are pronounced in the mouth. 
+Each family is represented with a general letter design.
+- Front: pronounced with the lips
+- Middle: pronounced with teeth and soft palate
+- Back: pronounced with hard palate and throat
+
+In each family, there are a few parent sounds. 
+Each parent sound represents a distinct glyph.
+
+Finally, each parent letter can have several derived letters
+- silent: this is the parent letter itself
+- vocal: this is a vocalized version of the parent letter
+- related: these are letters which are close enough in pronunciation to the parent letter that they have been grouped with it.
+- compound: this is technically two separate sounds, the first of which is the parent letter or its vocal variant
+-->
+
+<p>There are three families of consonants based on where they are pronounced in the mouth.
+    Each family is represented with a general letter design.</p>
+    <ul>
+    <li>Front: pronounced with the lips</li>
+    <li>Middle: pronounced with teeth and soft palate</li>
+    <li>Back: pronounced with hard palate and throat</li>
+    </ul>
+    <p>In each family, there are a few parent sounds.
+    Each parent sound represents a distinct glyph.</p>
+    <p>Finally, each parent letter can have several derived letters</p>
+    <ul>
+    <li>silent: this is the parent letter itself</li>
+    <li>vocal: this is a vocalized version of the parent letter</li>
+    <li>related: these are letters which are close enough in pronunciation to the parent letter that they have been grouped with it.</li>
+    <li>compound: this is technically two separate sounds, the first of which is the parent letter or its vocal variant</li>
+    </ul>    
+
+<pre>
+
+FRONT -----------.   MIDDLE -----------.   BACK ------------.
+|                |   |                 |   |                |
+|  P---.         |   |  T------------. |   |  R---.         |
+|  | P |         |   |  | T | Θ | Tʃ | |   |  | R |         |
+|  | B |         |   |  | D | Ð | DƷ | |   |  `---'         |
+|  `---'         |   |  `------------' |   |  Ŋ---.         |
+|  M-------.     |   |  S-------.      |   |  | Ŋ |         |
+|  | M | W |     |   |  | S | ʃ |      |   |  `---'         |
+|  `-------'     |   |  | Z | Ʒ |      |   |  K--------.    |
+|  F---.         |   |  `-------'      |   |  | K | KS |    |
+|  | F |         |   |  L---.          |   |  | G | GZ |    |
+|  | V |         |   |  | L |          |   |  `--------'    |
+|  `---'         |   |  `---'          |   |  Y---.         |
+|                |   |  N---.          |   |  | Y |         |
+`----------------'   |  | N |          |   |  `---'         |
+                     |  `---'          |   |  H---.         |
+                     |                 |   |  | H |         |
+LEGEND:              `-----------------'   |  `---'         |
+                                           |                |
+parent letter ----------------------.      `----------------'
+| silent | related s. | compound s. |
+| vocal  | related v. | compound v. |
+`-----------------------------------'
+</pre>
+
+<!--
+Example:
+- The T sound is a parent letter with its own glyph, <span class="s">t</span>. 
+  It is pronounced like the T in english, with the tongue placed on the hard palate
+    - A vocalized T sound becomes a D sound. The D sound is represented with the T letter with a vocal mark, <span class="s">d</span>.
+- The TH sound as in "thanks" (Θ) is very similar to a T sound. 
+  It is represented with a T letter with a related mark, <span class="s">u</span>.
+    - A vocalized Θ sound becomes a Ð sound as in "this." 
+      It is represented with a T letter with a related mark and a vocal mark, <span class="s">i</span>.
+- The Tʃ sound as in "chair" is in reality two sound, the first of which is a T sound. 
+  It is represented by a T letter with a compound mark, <span class="s">?</span>.
+    - A vocalized Tʃ sound becomes a DƷ sound, as in "juice." 
+      It is represented with a T letter with a compound mark and a vocal mark, <span class="s">?</span>.
+
+-->
+
+<p>Example</p>
+<ul>
+<li>The T sound is a parent letter with its own glyph, <span class="s">t</span>.
+It is pronounced like the T in english, with the tongue placed on the hard palate.
+<ul>
+<li>A vocalized T sound becomes a D sound. The D sound is represented with the T letter with a vocal mark, <span class="s">d</span>.</li>
+</ul>
+</li>
+<li>The TH sound as in &quot;thissle&quot; (Θ) is very similar to a T sound. It is represented with a T letter with a related mark, <span class="s">u</span>.
+<ul>
+<li>A vocalized Θ sound becomes a Ð sound as in &quot;this.&quot; It is represented with a T letter with a related mark and a vocal mark, <span class="s">i</span>.</li>
+</ul>
+</li>
+<li>The Tʃ sound as in &quot;chair&quot; is in reality two sound, the first of which is a T sound.
+It is represented by a T letter with a compound mark
+<ul>
+<li>A vocalized Tʃ sound becomes a DƷ sound, as in &quot;juice.&quot; It is represented with a T letter with a compound mark and a vocal mark</li>
+</ul>
+</li>
+</ul>
+
     <h2 id="consonants">
     <a class="anchor" href="#consonants"></a>consonants
     </h2>
