--- a/digital.html
+++ b/digital.html
@@ -64,9 +64,10 @@ A thoughtful combined use of these features can lead to a typing experience in w
     </h2>
     <p>The Planck is a small mechanical keyboard with a simple design created by <a href="https://jackhumbert.com/">Jack Humbert</a> in 2014.</p>
     
+    <div class="single"></div>
     <pre><code>
 
-       ,--------------------------------------------------------------.
+       ,---------------------------------------------------------------.
        | ,-----------------------------------------------------------. |
        | |    |    |    |    |    |    |    |    |    |    |    |    | |
        | |    |    |    |    |    |    |    |    |    |    |    |    | |
