--- a/index.html
+++ b/index.html
@@ -53,14 +53,18 @@ HOME
 |__ MT3 Susuwatari
 |__ Keymap.c
 
+
 Writing tools
 |
 |__ Digital: Planck
+|   |
 |   |__ Hardware
 |   |__ Software
 |   |__ Keymap.c
 |
+|
 |__ Analog: Flex Pen
+
 
 Writing systems
 |
@@ -78,7 +82,7 @@ Writing systems
         </p>        
         <p>Below I like to put excerpts from various project logs, ones I've picked because I think they're interesting.</p>
         <h1 id="mt3-susuwatari"><a class="anchor" href="#mt3-susuwatari"></a>MT3 Susuwatari</h1>
-        <p>The MT3 keycap profile is a modern cap which draws heavy inspiration from a family of much-loved vintage IBM terminal keyboards. The design was a community effort headed up by <a href="https://matt3o.com/about-mt3-profile-and-devtty-set/">Matt3o</a> in 2015.</p>
+        <p>The MT3 keycap profile is a modern cap which draws heavy inspiration from a family of much-loved vintage IBM terminal keyboards. The design was a community effort headed up by <a href="https://matt3o.com/">Matt3o</a> in 2015.</p>
         <p>Helpful MT3 features</p>
         <ul>
         <li>Sculpted profile, meaning each row's height and angle is unique and determined by its distance and interaction with your fingers — this is a fairly common feature</li>
