--- a/analog.html
+++ b/analog.html
@@ -33,11 +33,9 @@
                 <p><a href="#keymapc"></a></p>
             </div>
         </div>
-
 <!--
 --------------------------------------------------------------------------------------------------------------
 -->
-
     <div id="main">
 
     <h1 id="alphabet">
@@ -50,27 +48,29 @@ The script tries to be a bit more phonetically coherent that typical English spe
 Below are the 26 consonant sounds that I use to write English.
 The idea was that the chart can be filled out and extended for different languages.
 
+<div class="theta"></div>
+
 <pre>
-FRONT -----------.   MIDDLE -----------.   BACK -------------.
-|                |   |                 |   |                 |
-|  P --.         |   |  T -----------. |   |  R --.          |
-|  | P |         |   |  | T | Θ | Tʃ | |   |  | R |          |
-|  | B |         |   |  | D | Ð | DƷ | |   |  `---'          |
-|  `---'         |   |  `------------' |   |  Ŋ --.          |
-|  M ------.     |   |  S-------.      |   |  | Ŋ |          |
-|  | M | W |     |   |  | S | ʃ |      |   |  `---'          |
-|  `-------'     |   |  | Z | Ʒ |      |   |  K -----------. |
-|  F --.         |   |  `-------'      |   |  | K |   | KS | |
-|  | F |         |   |  L --.          |   |  | G |   | GZ | |
-|  | V |         |   |  | L |          |   |  `------------' |
-|  `---'         |   |  `---'          |   |  Y --.          |
-|                |   |  N --.          |   |  | Y |          |
-`----------------'   |  | N |          |   |  `---'          |
-                     |  `---'          |   |  H --.          |
-                     |                 |   |  | H |          |
-                     `-----------------'   |  `---'          |
-                                           |                 |
-                                           `-----------------'
+FRONT ------.  MIDDLE ----------.  BACK ------------.
+|           |  |                |  |                |
+| P --.     |  | T -----------. |  | R --.          |
+| | P |     |  | | T | Θ | Tʃ | |  | | R |          |
+| | B |     |  | | D | Ð | DƷ | |  | `---'          |
+| `---'     |  | `------------' |  | Ŋ --.          |
+| M ------. |  | S-------.      |  | | Ŋ |          |
+| | M | W | |  | | S | ʃ |      |  | `---'          |
+| `-------' |  | | Z | Ʒ |      |  | K -----------. |
+| F --.     |  | `-------'      |  | | K |   | KS | |
+| | F |     |  | L --.          |  | | G |   | GZ | |
+| | V |     |  | | L |          |  | `------------' |
+| `---'     |  | `---'          |  | Y --.          |
+|           |  | N --.          |  | | Y |          |
+`-----------'  | | N |          |  | `---'          |
+               | `---'          |  | H --.          |
+               |                |  | | H |          |
+               `----------------'  | `---'          |
+                                   |                |
+                                   `----------------'
 </pre>
 
 The chart uses five symbols for sounds which don't have their own letters in the english alphabet:
@@ -164,33 +164,41 @@ Example:
 
 The `aw` sound, as in `bark` is often categorized as  an a-vowel variant. However, since it is close to an O sound, and since the a already has a variant — the a-sound in `aha!` — I have categorized it as an o-variant.
 
-Not all vowel sounds are included. For example, the diphtong `ey` as in `rain` is not included. This diphtong is so similar in prononciation to the sounds `short e` + `y`  and also to the sound `long a` that it is spelled like these.
+Not all vowel sounds are included. For example, the diphthong `ey` as in `rain` is not included. This diphtong is so similar in prononciation to the sounds `short e` + `y`  and also to the sound `long a` that it is spelled like these.
 -->
+
+
+
+
+
+
 <p>The script tries to be a bit more phonetically coherent that typical English spelling.</p>
 <p>Below are the 26 consonant sounds that I use to write English.
 The idea was that the chart can be filled out and extended for different languages.</p>
+<div class="theta"></div>
 <pre>
-FRONT -----------.   MIDDLE -----------.   BACK -------------.
-|                |   |                 |   |                 |
-|  P --.         |   |  T -----------. |   |  R --.          |
-|  | P |         |   |  | T | Θ | Tʃ | |   |  | R |          |
-|  | B |         |   |  | D | Ð | DƷ | |   |  `---'          |
-|  `---'         |   |  `------------' |   |  Ŋ --.          |
-|  M ------.     |   |  S-------.      |   |  | Ŋ |          |
-|  | M | W |     |   |  | S | ʃ |      |   |  `---'          |
-|  `-------'     |   |  | Z | Ʒ |      |   |  K -----------. |
-|  F --.         |   |  `-------'      |   |  | K |   | KS | |
-|  | F |         |   |  L --.          |   |  | G |   | GZ | |
-|  | V |         |   |  | L |          |   |  `------------' |
-|  `---'         |   |  `---'          |   |  Y --.          |
-|                |   |  N --.          |   |  | Y |          |
-`----------------'   |  | N |          |   |  `---'          |
-                     |  `---'          |   |  H --.          |
-                     |                 |   |  | H |          |
-                     `-----------------'   |  `---'          |
-                                           |                 |
-                                           `-----------------'
+FRONT ------.  MIDDLE ----------.  BACK ------------.
+|           |  |                |  |                |
+| P --.     |  | T -----------. |  | R --.          |
+| | P |     |  | | T | Θ | Tʃ | |  | | R |          |
+| | B |     |  | | D | Ð | DƷ | |  | `---'          |
+| `---'     |  | `------------' |  | Ŋ --.          |
+| M ------. |  | S-------.      |  | | Ŋ |          |
+| | M | W | |  | | S | ʃ |      |  | `---'          |
+| `-------' |  | | Z | Ʒ |      |  | K -----------. |
+| F --.     |  | `-------'      |  | | K |   | KS | |
+| | F |     |  | L --.          |  | | G |   | GZ | |
+| | V |     |  | | L |          |  | `------------' |
+| `---'     |  | `---'          |  | Y --.          |
+|           |  | N --.          |  | | Y |          |
+`-----------'  | | N |          |  | `---'          |
+               | `---'          |  | H --.          |
+               |                |  | | H |          |
+               `----------------'  | `---'          |
+                                   |                |
+                                   `----------------'
 </pre>
+
 
 <p>The chart uses five symbols for sounds which don&#39;t have their own letters in the english alphabet:</p>
 <ul>
@@ -464,10 +472,9 @@ It is represented with a T letter with a compound mark and a vocal mark (which h
 </tr>
 </tbody></table>
 <p>The <code>aw</code> sound, as in <code>bark</code> is often categorized as  an a-vowel variant. However, since it is close to an O sound, and since the a already has a variant — the a-sound in <code>aha!</code> — I have categorized it as an o-variant.</p>
-<p>Not all vowel sounds are included. For example, the diphtong <code>ey</code> as in <code>rain</code> is not included. This diphtong is so similar in prononciation to the sounds <code>short e</code> + <code>y</code>  and also to the sound <code>long a</code> that it is spelled like these.</p>
+<p>Not all vowel sounds are included. For example, the diphthong <code>ey</code> as in <code>rain</code> is not included. This diphtong is so similar in prononciation to the sounds <code>short e</code> + <code>y</code>  and also to the sound <code>long a</code> that it is spelled like these.</p>
+
 
 </div>
-
 </body>
-
 </html>
