script chart width mobile

--- a/analog.html
+++ b/analog.html
@@ -51,26 +51,26 @@ The idea was that the chart can be filled out and extended for different languag
 <div class="theta"></div>
 
 <pre>
-FRONT ------.  MIDDLE ----------.  BACK ------------.
-|           |  |                |  |                |
-| P --.     |  | T -----------. |  | R --.          |
-| | P |     |  | | T | Θ | Tʃ | |  | | R |          |
-| | B |     |  | | D | Ð | DƷ | |  | `---'          |
-| `---'     |  | `------------' |  | Ŋ --.          |
-| M ------. |  | S-------.      |  | | Ŋ |          |
-| | M | W | |  | | S | ʃ |      |  | `---'          |
-| `-------' |  | | Z | Ʒ |      |  | K -----------. |
-| F --.     |  | `-------'      |  | | K |   | KS | |
-| | F |     |  | L --.          |  | | G |   | GZ | |
-| | V |     |  | | L |          |  | `------------' |
-| `---'     |  | `---'          |  | Y --.          |
-|           |  | N --.          |  | | Y |          |
-`-----------'  | | N |          |  | `---'          |
-               | `---'          |  | H --.          |
-               |                |  | | H |          |
-               `----------------'  | `---'          |
-                                   |                |
-                                   `----------------'
+FRONT ------.  MIDDLE ----------.  BACK ----------.
+|           |  |                |  |              |
+| P --.     |  | T -----------. |  | R --.        |
+| | P |     |  | | T | Θ | Tʃ | |  | | R |        |
+| | B |     |  | | D | Ð | DƷ | |  | `---'        |
+| `---'     |  | `------------' |  | Ŋ --.        |
+| M ------. |  | S-------.      |  | | Ŋ |        |
+| | M | W | |  | | S | ʃ |      |  | `---'        |
+| `-------' |  | | Z | Ʒ |      |  | K ---------. |
+| F --.     |  | `-------'      |  | | K | | KS | |
+| | F |     |  | L --.          |  | | G | | GZ | |
+| | V |     |  | | L |          |  | `----------' |
+| `---'     |  | `---'          |  | Y --.        |
+|           |  | N --.          |  | | Y |        |
+`-----------'  | | N |          |  | `---'        |
+               | `---'          |  | H --.        |
+               |                |  | | H |        |
+               `----------------'  | `---'        |
+                                   |              |
+                                   `--------------'
 </pre>
 
 The chart uses five symbols for sounds which don't have their own letters in the english alphabet:
@@ -177,26 +177,26 @@ Not all vowel sounds are included. For example, the diphthong `ey` as in `rain` 
 The idea was that the chart can be filled out and extended for different languages.</p>
 <div class="theta"></div>
 <pre>
-FRONT ------.  MIDDLE ----------.  BACK ------------.
-|           |  |                |  |                |
-| P --.     |  | T -----------. |  | R --.          |
-| | P |     |  | | T | Θ | Tʃ | |  | | R |          |
-| | B |     |  | | D | Ð | DƷ | |  | `---'          |
-| `---'     |  | `------------' |  | Ŋ --.          |
-| M ------. |  | S-------.      |  | | Ŋ |          |
-| | M | W | |  | | S | ʃ |      |  | `---'          |
-| `-------' |  | | Z | Ʒ |      |  | K -----------. |
-| F --.     |  | `-------'      |  | | K |   | KS | |
-| | F |     |  | L --.          |  | | G |   | GZ | |
-| | V |     |  | | L |          |  | `------------' |
-| `---'     |  | `---'          |  | Y --.          |
-|           |  | N --.          |  | | Y |          |
-`-----------'  | | N |          |  | `---'          |
-               | `---'          |  | H --.          |
-               |                |  | | H |          |
-               `----------------'  | `---'          |
-                                   |                |
-                                   `----------------'
+FRONT ------.  MIDDLE ----------.  BACK ----------.
+|           |  |                |  |              |
+| P --.     |  | T -----------. |  | R --.        |
+| | P |     |  | | T | Θ | Tʃ | |  | | R |        |
+| | B |     |  | | D | Ð | DƷ | |  | `---'        |
+| `---'     |  | `------------' |  | Ŋ --.        |
+| M ------. |  | S-------.      |  | | Ŋ |        |
+| | M | W | |  | | S | ʃ |      |  | `---'        |
+| `-------' |  | | Z | Ʒ |      |  | K ---------. |
+| F --.     |  | `-------'      |  | | K | | KS | |
+| | F |     |  | L --.          |  | | G | | GZ | |
+| | V |     |  | | L |          |  | `----------' |
+| `---'     |  | `---'          |  | Y --.        |
+|           |  | N --.          |  | | Y |        |
+`-----------'  | | N |          |  | `---'        |
+               | `---'          |  | H --.        |
+               |                |  | | H |        |
+               `----------------'  | `---'        |
+                                   |              |
+                                   `--------------'
 </pre>
 
 
