--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Imago Mundi</title>
+    <title>Pictura Mundi</title>
     <link rel="icon" href="favicon/favicon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
@@ -14,7 +14,7 @@
 <div id="content">
     
     <div id="banner">
-        <a href="index.html">Imago Mundi</a>
+        <a href="index.html">Pictura Mundi</a>
     </div>
 
     <div id="sidebar" class="home">
@@ -39,6 +39,44 @@
 
     <div id="main">
         <h1 id="hi"><a class="anchor" href="#hi"></a>Hi :)</h1>
+
+        <p>Web projects</p>
+        <ul>
+            <li><a href="https://www.toyotawar.com" target="_blank">The Great Toyota War Handbook</a></li>
+            <li><a href="https://www.st-andrew.site" target="_blank">St.Andrew sanctuary</a></li>
+            <li><a href="https://picturamundi.github.io/runner/" target="_blank">Runner Game</a></li>
+        </ul>
+        <p>Games</p>
+        <ul>
+            <li><a href="https://www.toyotawar.com" target="_blank">The Great Toyota War Handbook</a></li>
+            <li><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2570889084" target="_blank">Chad: The Toyota Wars simulator</a></li>
+        </ul>
+        <p>CSS themes</p>
+        <ul>
+            <li><a href="https://github.com/picturamundi/adoc-theme" target="_blank">Asciidoc styles</a></li>
+            <li><a href="https://github.com/picturamundi/populi-theme" target="_blank">Populi dark mode</a></li>
+        </ul>
+        <p>Writing tools (this site)</p>
+        <ul>
+            <li><a href="analog.html">Cursive writing system</a></li>
+            <li><a href="digital.html">Custom keyboard</a></li>
+        </ul>
+        <!--<p>Research and writing</p>
+        <ul>
+            <li><a href="https://www.academia.edu/72708020/Lutheran_Abolitionists_in_19th_Century_North_America" target="_blank">Lutheran Abolitionists in 19th-Century North America</a></li>
+        </ul>-->
+        <p>Social Media</p>
+        <ul>
+            <li>Website: <a href="https://picturamundi.com" target="_blank">picturamundi.com</a></li>
+            <li>Email: <a href="mailto:picturamundi@protonmail.com?" target="_blank">picturamundi@pm.me</a></li>
+            <li>Twitter: <a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></li>
+            <li>GitHub: <a href="https://github.com/picturamundi" target="_blank">picturamundi</a></li>
+            <li>Deskthority: <a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22444" target="_blank">picturamundi</a></li>
+            <li>Reddit: <a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22045" target="_blank">u/picturamundi</a></li>
+        </ul>
+
+        <hr>
+
         <p>Tinkering with writing tools tends to be the focus around here. 
            Writing tools can be both physical writing instruments as well as writing systems. 
            Inks, scripts, mechanical keyboard switches... I like it all.</p>
