--- a/digital.html
+++ b/digital.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Imago Mundi</title>
+    <title>Pictura Mundi</title>
     <link rel="icon" href="favicon/favicon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
@@ -13,30 +13,33 @@
 
 <div id="content">
 
-    <div id="banner">
-        <a href="index.html">Imago Mundi</a>
-    </div>
 
     <div id="sidebar" class="home">
+        <div id="banner"><a href="index.html">Pictura Mundi</a></div>
         <div id="pages">
-            <h1 class="invis">.</h1>
             <p><a href="index.html">Home</a></p>
             <p><a href="digital.html" class="active">Digital Writing</a></p>
             <p><a href="analog.html">Analog Writing</a></p>
-            <p><a href="theme.html">[Appearance]</a></p>
+            <p><button id="theme-toggle">[Appearance]</button></p>
         </div>
         <!--
         <div id="headings">
-            <p><a href="#hi">Hi :)</a></p>
-            <p><a href="#mt3-susuwatari">MT3 Susuwatari</a></p>
-            <p><a href="#keymapc">Keymap.c</a></p>
+                <p><a href="https://picturamundi.com">picturamundi.com</a></p>
+                <p><a href="mailto:picturamundi@protonmail.com?" target="_blank">picturamundi@pm.me</a></p>
+                <p><a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></p>
+                <p><a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22045" target="_blank">u/picturamundi</a></p>
         </div>-->
     </div>
+
+    <div id="main">
+        <div id="banner2"><a href="index.html">Pictura Mundi</a></div>
+
+
+
 
 <!--
 --------------------------------------------------------------------------------------------------------------
 -->
-    <div id="main">
 
 <!--
 # introduction
@@ -56,32 +59,30 @@ The board is built around a few, straightforward design features:
 A thoughtful combined use of these features can lead to a typing experience in which keys and key-combinations seems to come effortlessly to your fingertips.
 -->
 
-    <h1 id="introduction">
-    <a class="anchor" href="#introduction"></a>introduction
-    </h1>
+<h1 id="introduction"><a class="anchor" href="#introduction"></a>Introduction</h1>
     <h2 id="olkb-planck">
-    <a class="anchor" href="#olkb-planck"></a>olkb planck
+    <a class="anchor" href="#olkb-planck"></a>OLKB planck
     </h2>
     <p>The Planck is a small mechanical keyboard with a simple design created by <a href="https://jackhumbert.com/">Jack Humbert</a> in 2014.</p>
     
-    <div class="single"></div>
+    <div class="ascii"></div>
     <pre><code>
 
-       ,---------------------------------------------------------------.
-       | ,-----------------------------------------------------------. |
-       | |    |    |    |    |    |    |    |    |    |    |    |    | |
-       | |    |    |    |    |    |    |    |    |    |    |    |    | |
-       | |----+----+----+----+----+----+----+----+----+----+----+----| |
-       | |    |    |    |    |    |    |    |    |    |    |    |    | |
-       | |    |    |    |    |    |    |    |    |    |    |    |    | |
-       | |----+----+----+----+----+----+----+----+----+----+----+----| |
-       | |    |    |    |    |    |    |    |    |    |    |    |    | |
-       | |    |    |    |    |    |    |    |    |    |    |    |    | |
-       | |----+----+----+----+----+----+----+----+----+----+----+----| |
-       | |    |    |    |    |    |    |    |    |    |    |    |    | |
-       | |    |    |    |    |    |    |    |    |    |    |    |    | |
-       | `----+----+----+----+----+----+----+----+----+----+----+----' |
-       `---------------------------------------------------------------'
+,---------------------------------------------------------------.
+| ,-----------------------------------------------------------. |
+| |    |    |    |    |    |    |    |    |    |    |    |    | |
+| |    |    |    |    |    |    |    |    |    |    |    |    | |
+| |----+----+----+----+----+----+----+----+----+----+----+----| |
+| |    |    |    |    |    |    |    |    |    |    |    |    | |
+| |    |    |    |    |    |    |    |    |    |    |    |    | |
+| |----+----+----+----+----+----+----+----+----+----+----+----| |
+| |    |    |    |    |    |    |    |    |    |    |    |    | |
+| |    |    |    |    |    |    |    |    |    |    |    |    | |
+| |----+----+----+----+----+----+----+----+----+----+----+----| |
+| |    |    |    |    |    |    |    |    |    |    |    |    | |
+| |    |    |    |    |    |    |    |    |    |    |    |    | |
+| `-----------------------------------------------------------' |
+`---------------------------------------------------------------'
 
     </code></pre>
 
@@ -94,7 +95,6 @@ A thoughtful combined use of these features can lead to a typing experience in w
     </ul>
     <p>A thoughtful combined use of these features can lead to a typing experience in which keys and key-combinations seems to come effortlessly to your fingertips.</p>
             
-
     </div>
 
 </div>
