--- a/index.html
+++ b/index.html
@@ -12,25 +12,24 @@
 <body>
 
 <div id="content">
-    
-    <div id="banner">
-        <a href="index.html">Pictura Mundi</a>
-    </div>
+
 
     <div id="sidebar" class="home">
+        <div id="banner"><a href="index.html">Pictura Mundi</a></div>
         <div id="pages">
-            <h1 class="invis">.</h1>
             <p><a href="index.html" class="active">Home</a></p>
             <p><a href="digital.html">Digital Writing</a></p>
             <p><a href="analog.html">Analog Writing</a></p>
-            <p><a href="theme.html">[Appearance]</a></p>
+            <p><button id="theme-toggle">[Appearance]</button></p>
         </div>
-        <!--
         <div id="headings">
-            <p><a href="#hi">Hi :)</a></p>
-            <p><a href="#mt3-susuwatari">MT3 Susuwatari</a></p>
-            <p><a href="#keymapc">Keymap.c</a></p>
-        </div>-->
+                <p><a href="https://picturamundi.com">picturamundi.com</a></p>
+                <p><a href="mailto:picturamundi@protonmail.com?" target="_blank">picturamundi@pm.me</a></p>
+                <p><a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></p>
+                <!--<li><a href="https://github.com/picturamundi" target="_blank">picturamundi</a></li>-->
+                <!--<li>Deskthority: <a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22444" target="_blank">picturamundi</a></li>-->
+                <p><a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22045" target="_blank">u/picturamundi</a></p>
+        </div>
     </div>
 
 <!--
@@ -38,44 +37,37 @@
 -->
 
     <div id="main">
-        <h1 id="hi"><a class="anchor" href="#hi"></a>Hi :)</h1>
+        <div id="banner2"><a href="index.html">Pictura Mundi</a></div>
 
-        <p>Web projects</p>
+        <h1 id="hi" class="first"><a class="anchor" href="#hi"></a>Things I've made</h1>
+
+        <p>Simple Websites</p>
         <ul>
             <li><a href="https://www.toyotawar.com" target="_blank">The Great Toyota War Handbook</a></li>
             <li><a href="https://www.st-andrew.site" target="_blank">St.Andrew sanctuary</a></li>
-            <li><a href="https://picturamundi.github.io/runner/" target="_blank">Runner Game</a></li>
+            <!--<li><a href="https://picturamundi.github.io/runner/" target="_blank">Runner Game</a></li>-->
         </ul>
-        <p>Games</p>
+        <p>The Great Toyota War board game</p>
         <ul>
             <li><a href="https://www.toyotawar.com" target="_blank">The Great Toyota War Handbook</a></li>
-            <li><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2570889084" target="_blank">Chad: The Toyota Wars simulator</a></li>
+            <li><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2570889084" target="_blank">The Great Toyota War on Steam</a></li>
         </ul>
-        <p>CSS themes</p>
+        <!--<p>CSS themes</p>
         <ul>
             <li><a href="https://github.com/picturamundi/adoc-theme" target="_blank">Asciidoc styles</a></li>
             <li><a href="https://github.com/picturamundi/populi-theme" target="_blank">Populi dark mode</a></li>
-        </ul>
+        </ul>-->
         <p>Writing tools (this site)</p>
         <ul>
             <li><a href="analog.html">Cursive writing system</a></li>
-            <li><a href="digital.html">Custom keyboard</a></li>
+            <li><a href="digital.html">Custom mechanical keyboard</a></li>
         </ul>
         <!--<p>Research and writing</p>
         <ul>
             <li><a href="https://www.academia.edu/72708020/Lutheran_Abolitionists_in_19th_Century_North_America" target="_blank">Lutheran Abolitionists in 19th-Century North America</a></li>
         </ul>-->
-        <p>Social Media</p>
-        <ul>
-            <li>Website: <a href="https://picturamundi.com" target="_blank">picturamundi.com</a></li>
-            <li>Email: <a href="mailto:picturamundi@protonmail.com?" target="_blank">picturamundi@pm.me</a></li>
-            <li>Twitter: <a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></li>
-            <li>GitHub: <a href="https://github.com/picturamundi" target="_blank">picturamundi</a></li>
-            <li>Deskthority: <a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22444" target="_blank">picturamundi</a></li>
-            <li>Reddit: <a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22045" target="_blank">u/picturamundi</a></li>
-        </ul>
 
-        <hr>
+        <h1>picturamundi.com</h1>
 
         <p>Tinkering with writing tools tends to be the focus around here. 
            Writing tools can be both physical writing instruments as well as writing systems. 
@@ -87,10 +79,8 @@
 
 HOME
 |
-|__ Hi :)
-|__ MT3 Susuwatari
-|__ Keymap.c
-
+|__ Things I've made
+|__ picturamundi.com
 
 Writing tools
 |
@@ -102,7 +92,6 @@ Writing tools
 |
 |
 |__ Analog: Flex Pen
-
 
 Writing systems
 |
@@ -117,120 +106,7 @@ Writing systems
             The goal is that these come together as the perfect writing tool tailored both to the shape of my mind and the mechanics of my fingers.</p>
         <p>I like to think of my script as a playful exploration into the frustrating tension between handwriting ergonomics, visual appeal, and rationale.
             As with the keyboard, the goal is that these come together as a practical and enjoyable writing experience that results in a beautiful and legible text.
-        </p>        
-        <p>Below I like to put excerpts from various project logs, ones I've picked because I think they're interesting.</p>
-        <h1 id="mt3-susuwatari"><a class="anchor" href="#mt3-susuwatari"></a>MT3 Susuwatari</h1>
-        <p>The MT3 keycap profile is a modern cap which draws heavy inspiration from a family of much-loved vintage IBM terminal keyboards. The design was a community effort headed up by <a href="https://matt3o.com/">Matt3o</a> in 2015.</p>
-        <p>Helpful MT3 features</p>
-        <ul>
-        <li>Sculpted profile, meaning each row's height and angle is unique and determined by its distance and interaction with your fingers — this is a fairly common feature</li>
-        <li>Spherical tops, meaning the caps mold to your fingertips through a slightly concave spherical top, as opposed to the far more common flat or cylindrical tops</li>
-        <li>Some sets, such as Susuwatari, are thick double-shot, meaning the keycap legends are molded rather than printed, making them crisp, vivid, and durable in an unrivaled way</li>
-        <li>The relatively tall caps contribute to a pleasant sound profile</li>
-        </ul>
-        <p>Anyone can eavesdrop on the lengthy desine brainstorms, production frustrations, surges of excitement, and empassioned deabtes that accompanied the creation of the MT3 profile on the <a href="https://deskthority.net/viewtopic.php?f=7&amp;t=10805">Deskthority forum</a> over the course of several years. It's a fun rabbit hole to fall into. Mad props to Matt3o for managing the strong-willed, strong-charactered keyboard enthusiasts that were both a huge help and a chaotic factor in this project!</p>
-        <p>The deskthority debates also birthed my favorite — although perhaps not the most accurate or astute — description of the Helvetica font, which on user had the misfortune to suggest for the keycap legends:</p>
-        <blockquote>
-        <p>There is no “whimsy” in Helvetica. It’s more like an orderly little jail in which the letters are a series of identical looking prisoners in tiny cells crying into their meagre rations, keeping their heads down so the warden doesn’t come beat them again.</p>
-        </blockquote>
-        <h1 id="keymapc"><a class="anchor" href="#keymapc"></a>Keymap.c</h1>
-            <p>The Planck is programmed according to my keylayout design using the QMK firmware. Below is the C file that is compiled and flashed onto the Planck's microcontroller usique the QMK Firmware.</p>
-            <pre><code class="language-c">
-#include QMK_KEYBOARD_H
-#include &quot;quantum.h&quot;
-
-enum {
-    QMKBEST = SAFE_RANGE,
-};
-
-enum {
-    SINGLE_TAP = 1,
-    SINGLE_HOLD,
-    DOUBLE_TAP,
-    DOUBLE_HOLD,
-    DOUBLE_SINGLE_TAP,
-    TRIPLE_TAP,
-    TRIPLE_HOLD
-};
-
-enum {
-    SH,
-    SP,
-    QU,
-    CM
-};
-
-typedef struct {
-    bool is_press_action;
-    uint8_t state;
-} tap;
-
-uint8_t cur_dance(qk_tap_dance_state_t *state);
-
-const uint16_t PROGMEM keymaps[][MATRIX_ROWS][MATRIX_COLS] = {
-
-/* 1 Base layer
- * ,----------------------------------.,-------------.,----------------------------------.
- * |  '   |  ,   |  .   |  p   |  y   || VOL+ | VOL- ||  f   |  g   |  c   |  r   |  l   |
- * |------+------+------+------+------||------+------||------+------+------+------+------|
- * |  a   |  o   |  e   |  u   |  i   || BRI+ | BRI- ||  d   |  h   |  t   |  n   |  s   | 
- * |------+------+------+------+------||------+------||------+------+------+------+------|
- * |  ;   |  q   |  j   |  k   |  x   || MREC | MREP ||  b   |  m   |  w   |  v   |  z   |
- * |------+------+------+------+------||------+------''------.------+------+------+------|
- * | BSP  |  (   |  !   |  -   |  SFT ||  TAB |     SPC      |  =   |  ?   |  )   |  ENT |
- * `----------------------------------'`------'--------------'---------------------------'
- * ,----------------------------------.,-------------.,----------------------------------.
- * |      |      |      |      | ESC  ||      |      ||      |      |      |      |      |
- * |------+------+------+------+------||------+------||------+------+------+------+------|
- * | SFT  | CTL  | OPT  | CMD  |      ||      |      ||      | CMD  | OPT  | CTL  | SFT  |
- * |------+------+------+------+------||------+------||------+------+------+------+------|
- * |      |      |      |      |      ||      |      ||      |      |      |      |      |
- * |------+------+------+------+------||------+------''------.------+------+------+------|
- * |      |      |      |  L4  |  L2  ||      |              |  L4  |      |      |      |
- * `----------------------------------'`------'--------------'---------------------------'
- */
-            
-[1] = LAYOUT_ortho_4x12(
-KC_QUOT, 		KC_COMM, 	    KC_DOT, 		KC_P, 	            TD(QU), 	    /**/KC__VOLDOWN,KC__VOLUP,/**/  KC_F, 		  KC_G, 	        KC_C, 		       KC_R, 	            KC_L,
-
-LSFT_T(KC_A),   CTL_T(KC_O), 	OPT_T(KC_E),	CMD_T(KC_U), 	    KC_I, 		    /**/KC_BRID,    KC_BRIU,  /**/  KC_D, 	      CMD_T(KC_H), 	    OPT_T(KC_T), 	   CTL_T(KC_N),	        RSFT_T(KC_S), 
-
-KC_SCLN, 	    KC_Q, 			KC_J, 			KC_K, 	            KC_X, 		    /**/DM_REC1,    DM_PLY1,  /**/  KC_B, 		  KC_M, 	        KC_W, 		       KC_V, 			    KC_Z,
-
-KC_BSPC, 	    LSFT(KC_9),    LSFT(KC_1),     LT(4, KC_MINS),      TD(SH),         /**/KC_TAB,    TD(SP),   /**/  TD(SP),       LT(5, KC_EQL),    LSFT(KC_SLSH),     LSFT(KC_0),          KC_ENT),
-
-/*  2 Navigation
- * ,----------------------------------.,-------------.,----------------------------------.
- * | &lt;&lt;&gt;&gt; |  &lt;&lt;  |   ▲  |  &gt;&gt;  |  &lt;-  ||      |      ||      |  7   |  8   |  9   |  *   |
- * |------+------+------+------+------||------+------||------+------+------+------+------|
- * |      |   ◀︎  |   ▼  |   ▶︎  | CLP  ||      |      ||      |  4   |  5   |  6   |  -   | 
- * |------+------+------+------+------||------+------||------+------+------+------+------|
- * |  SS3 |  SS3 |  SS4 |  SS4 |  -&gt;  ||      |      ||  1   |  2   |  3   |  +   |      |
- * |------+------+------+------+------||------+------''------.------+------+------+------|
- * | ENT  |      |      |      | **** ||      |    CMD_SP    |  BSP |  0   |      |      |
- * `----------------------------------'`------'--------------'---------------------------'
- * ,----------------------------------.,-------------.,----------------------------------.
- * |      |      |      |      |      ||      |      ||      |      |      |      |      |
- * |------+------+------+------+------||------+------||------+------+------+------+------|
- * | SFT  | CTL  | OPT  | CMD  |      ||      |      ||      | CMD  | OPT  | CTL  | SFT  |
- * |------+------+------+------+------||------+------||------+------+------+------+------|
- * |      |      |      |      |      ||      |      ||      |      |      |      |      |
- * |------+------+------+------+------||------+------''------.------+------+------+------|
- * |      |      |      |      | **** ||      |              |      |      |      |      |
- * `----------------------------------'`------'--------------'---------------------------'
- */
-
-[2] = LAYOUT_ortho_4x12(
-A(KC_UP),       A(KC_LEFT),     KC_UP,          A(KC_RIGHT),    LGUI(KC_RBRC),  /**/_______,        _______,/**/    KC_COMM,        KC_7,           KC_8, 		    KC_9, 		    KC_PAST,
-
-SFT_T(KC_NO),   CTL_T(KC_LEFT), OPT_T(KC_DOWN), CMD_T(KC_RIGHT),LCAG(KC_V), 	/**/_______,        _______,/**/    _______, 		CMD_T(KC_4),    OPT_T(KC_5),    CTL_T(KC_6),    RSFT(KC_PMNS),
-
-SCMD(KC_3),     LCAG(KC_3),     SCMD(KC_4),     LCAG(KC_4),     LGUI(KC_LBRC), 	/**/_______,        _______,/**/    _______, 	    KC_1,  	        KC_2, 		    KC_3, 		    KC_PPLS,
-
-KC_ENT,         _______,        _______,        _______,        _______,		/**/LGUI(KC_SPC),   LGUI(KC_SPC),   LGUI(KC_SPC), 	KC_BSPC,  	    KC_0, 		    _______, 		KC_ENT),
-
-// ...
-        </code></pre>
+        </p> 
 
     </div>
 
