universal dynamic favicon

--- a/analog.html
+++ b/analog.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Pictura Mundi</title>
-    <link rel="icon" href="favicon/favicon.svg">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
-    <script type="text/javascript" src="script.js"></script>
+  <title>Pictura Mundi</title>
+  <link id="favicon" rel="icon" href="favicon/favicon.svg">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+  <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
+  <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
