remove reddit link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p><a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></p>
                 <!--<li><a href="https://github.com/picturamundi" target="_blank">picturamundi</a></li>-->
                 <!--<li>Deskthority: <a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22444" target="_blank">picturamundi</a></li>-->
-                <p><a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22045" target="_blank">u/picturamundi</a></p>
+                <!--<p><a href="https://deskthority.net/memberlist.php?mode=viewprofile&u=22045" target="_blank">u/picturamundi</a></p>-->
         </div>
     </div>
 
