--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Pictura Mundi</title>
-    <link rel="icon" href="favicon/favicon.svg">
+    <link id="favicon" rel="icon" href="favicon/favicon.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
     <script type="text/javascript" src="script.js"></script>
