default favicon fix light.svg

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Pictura Mundi</title>
-    <link id="favicon" rel="icon" href="favicon/favicon.svg">
+    <link id="favicon" rel="icon" href="favicon/light.svg">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link id="theme" rel="stylesheet" type="text/css" media="screen" href="light.css">
     <script type="text/javascript" src="script.js"></script>
@@ -23,7 +23,7 @@
             <p><button id="theme-toggle">[Appearance]</button></p>
         </div>
         <div id="headings">
-                <p><a href="https://picturamundi.com">picturamundi.com</a></p>
+                <p><a href="http://picturamundi.com">picturamundi.com</a></p>
                 <p><a href="mailto:picturamundi@protonmail.com?" target="_blank">picturamundi@pm.me</a></p>
                 <p><a href="https://twitter.com/picturamundi" target="_blank">@picturamundi</a></p>
                 <!--<li><a href="https://github.com/picturamundi" target="_blank">picturamundi</a></li>-->
